[workspace]
members = [
    "sync",
    "core/atm",
    "core/bus",
    "core/cli",
    "core/cls",
    "core/cnf",
    "core/dbm",
    "core/err",
    "core/mqtt",
    "core/net",
    "core/rpc",
    "core/vnd",
]

resolver = "2"

default-members = ["sync"]

[workspace.package]
version = "0.1.0"
authors = ["mossida"]
edition = "2021"
license = "Business License"

[workspace.dependencies]
surrealdb = { version = "1.2.0", default-features = true, features = [
    "kv-rocksdb",
] }

serde = { version = "1.0.197", features = ["derive"] }
tracing = { version = "0.1.40" }
async-trait = { version = "0.1.77" }
futures = { version = "0.3.30" }
ractor = { version = "0.9.6" }
serde_json = { version = "1.0.114" }

tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10" }
