[workspace]
members = [
    "sync",
    "core/atm",
    "core/bus",
    "core/cli",
    "core/cls",
    "core/cnf",
    "core/dbm",
    "core/err",
    "core/mqtt",
    "core/net",
    "core/rpc",
    "core/vnd",
    "core/svc",
    "core/trg",
]

resolver = "2"

default-members = ["sync"]

[workspace.package]
version = "0.1.0"
authors = ["mossida"]
edition = "2021"
license = "Business License"

[workspace.dependencies]
surrealdb = { version = "1.3.1" }

serde = { version = "1.0.197", features = ["derive"] }
tracing = { version = "0.1.40" }
async-trait = { version = "0.1.79" }
futures = { version = "0.3.30" }
ractor = { version = "0.9.7" }
serde_json = { version = "1.0.114" }
dashmap = { version = "5.5.3", features = ["serde"] }

tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10" }
tokio-stream = { version = "0.1.15", features = ["sync"] }
