[workspace]
members = ["sync", "core/*", "components"]
resolver = "2"

default-members = ["sync"]

[workspace.package]
version = "0.1.0"
authors = ["mossida"]
edition = "2021"
license = "Business License"

[workspace.dependencies]
surrealdb = { version = "1.4.2" }

trait-variant = { version = "0.1.2" }
serde = { version = "1.0.201", features = ["derive"] }
tracing = { version = "0.1.40" }
async-trait = { version = "0.1.80" }
futures = { version = "0.3.30" }
ractor = { version = "0.9.8" }
serde_json = { version = "1.0.117" }
dashmap = { version = "5.5.3", features = ["serde"] }

tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11" }
tokio-stream = { version = "0.1.15", features = ["sync"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
