[package]
name = "components"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["common"]
common = []

[dependencies]
enum_dispatch = { version = "*" }

trait-variant = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ractor = { workspace = true }

dbm = { path = "../core/dbm" }
bus = { path = "../core/bus" }
mqtt = { path = "../core/mqtt" }
trg = { path = "../core/trg" }
svc = { path = "../core/svc" }
vnd = { path = "../core/vnd" }
err = { path = "../core/err" }
