[package]
name = "sync"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.18"

tokio = { workspace = true }

cli = { path = "../core/cli" }
err = { path = "../core/err" }
