[package]
name = "zigbee"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
ractor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

err = { path = "../../core/err" }
bus = { path = "../../core/bus" }
dbm = { path = "../../core/dbm" }
cls = { path = "../../core/cls" }
svc = { path = "../../core/svc" }
trg = { path = "../../core/trg" }
mqtt = { path = "../../core/mqtt" }
vnd = { path = "../../core/vnd" }
