[package]
name = "atm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.5.3", features = ["serde"] }
rayon = { version = "1.9.0" }

ractor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

bus = { path = "../bus" }
dbm = { path = "../dbm" }
cls = { path = "../cls" }
svc = { path = "../svc" }
trg = { path = "../trg" }
err = { path = "../err" }
