[package]
name = "atm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "6.0.0", features = ["serde"] }

ractor = { workspace = true }
serde = { workspace = true }
surrealdb = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

bus = { path = "../bus" }
dbm = { path = "../dbm" }
svc = { path = "../svc" }
trg = { path = "../trg" }
err = { path = "../err" }
vnd = { path = "../vnd" }
