[package]
name = "bus"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { version = "1.18.0" }
tokio-util = { version = "0.7.10" }
tokio-stream = { version = "0.1.15", features = ["sync"] }

tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
ractor = { workspace = true }

err = { path = "../err" }
