[package]
name = "bus"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7.11" }
tokio-stream = { version = "0.1.15", features = ["sync"] }

serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
ractor = { workspace = true }
