[package]
name = "cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"

tracing = { workspace = true }

bus = { path = "../bus" }
cnf = { path = "../cnf" }
err = { path = "../err" }
net = { path = "../net" }
dbm = { path = "../dbm" }
mqtt = { path = "../mqtt" }
vnd = { path = "../vnd" }
atm = { path = "../atm" }
