[package]
name = "cls"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.5.3", features = ["serde"] }
uom = { version = "0.36.0", features = ["default", "use_serde"] }
serde_with = { version = "3.7.0" }

serde = { workspace = true }
serde_json = { workspace = true }

dbm = { path = "../dbm" }
