[package]
name = "cnf"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
rumqttd = "0.19.0"

serde = { workspace = true }

err = { path = "../err" }
