[package]
name = "dbm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
thiserror = "1.0.30"
surrealdb-migrations = "1.1.0"

serde = { workspace = true }
tracing = { workspace = true }
surrealdb = { workspace = true }
futures = { workspace = true }

cnf = { path = "../cnf" }
err = { path = "../err" }
