[package]
name = "dbm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
surrealdb-migrations = "1.2.3"
either = { version = "1.11.0", features = ["serde"] }

trait-variant = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
surrealdb = { workspace = true }
futures = { workspace = true }

cnf = { path = "../cnf" }
err = { path = "../err" }
