[package]
name = "err"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.60" }
miette = { version = "7.2.0", features = ["fancy"] }
config = "0.14.0"

surrealdb = { workspace = true }
serde_json = { workspace = true }
ractor = { workspace = true }
