[package]
name = "integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
ractor = "0.9.3"
macros = { version = "0.1.0", path = "../macros" }
models = { version = "0.1.0", path = "../models" }
utils = { version = "0.1.0", path = "../utils" }
resources = { version = "0.1.0", path = "../resources" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = "0.11.22"
once_cell = "1.19.0"
chrono = "0.4.31"
log = "0.4.20"
derive_more = { version = "0.99.17", features = [] }
hashbrown = { version = "0.14.3", features = ["serde"] }
revision = "0.5.0"
dashmap = "5.5.3"
priority-queue = "1.3.2"
rayon = "1.8.0"
schemars = "0.8.16"
surrealdb = "1.0.2"
async-trait = { version = "0.1.75", features = [] }