[package]
name = "integrations"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ractor = "0.9.6"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
reqwest = "0.11.24"
once_cell = "1.19.0"
chrono = "0.4.34"
log = "0.4.20"
derive_more = { version = "0.99.17", features = [] }
hashbrown = { version = "0.14.3", features = ["serde"] }
revision = "0.5.0"
dashmap = "5.5.3"
priority-queue = "1.4.0"
rayon = "1.8.1"
schemars = "0.8.16"
surrealdb = "1.2.0"
async-trait = { version = "0.1.77", features = [] }
uom = { version = "0.35.0", features = ["default", "use_serde"] }
bytes = "1.5.0"
futures = "0.3.30"
tokio = { version = "*", features = ["full"] }

macros = { version = "0.1.0", path = "../macros" }
models = { version = "0.1.0", path = "../models" }
utils = { version = "0.1.0", path = "../utils" }
resources = { version = "0.1.0", path = "../resources" }
