[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ractor = "0.9.5"
quote = "1.0.35"
syn = "2.0.48"
derive_more = "0.99.17"
proc-macro2 = "1.0.76"
static_assertions = "1.1.0"
