[package]
name = "macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ractor = "0.9.6"
quote = "1.0.35"
syn = "2.0.50"
derive_more = "0.99.17"
proc-macro2 = "1.0.78"
static_assertions = "1.1.0"
