[package]
name = "models"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.113", features = ["raw_value"] }

log = "0.4.20"
rayon = "1.8.1"
futures = "0.3.30"

surrealdb = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

macros = { path = "../macros" }
utils = { path = "../utils" }
resources = { path = "../resources" }
