[package]
name = "mqtt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttd = "0.19.0"

tokio = { workspace = true }
tokio-util = { workspace = true }

cnf = { path = "../cnf" }
