[package]
name = "net"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: check dependencies
tracing-subscriber = "0.3.18"
axum = { version = "0.7.5", features = ["ws"] }
axum-server = "0.6.0"
tower = { version = "0.4.13", features = ["full"] }
surrealdb-migrations = "1.2.3"
config = { version = "0.14.0", features = ["json5"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
tower-http = { version = "0.5.2", features = ["full"] }
tokio-util = "0.7.10"
ractor = "0.9.7"
serde_json = "1.0.114"
revision = "0.5.0"
schemars = "0.8.16"
futures-util = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
typetag = "0.2.16"
once_cell = "1.19.0"

tracing = { workspace = true }
surrealdb = { workspace = true }
serde = { workspace = true }

mqtt = { path = "../mqtt" }
err = { path = "../err" }
rpc = { path = "../rpc" }
