[package]
name = "resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
securestore = "0.100.0"
surrealdb = { version = "1.0.2", features = ["default", "kv-rocksdb"] }
surrealdb-migrations = "1.0.1"
utils = { version = "0.1.0", path = "../utils" }
once_cell = "1.19.0"
serde = "1.0.193"
log = "0.4.20"
config = "0.13.4"
zeroize = { version = "1.7.0", features = ["derive"] }
schemars = "0.8.16"