[package]
name = "rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
dashmap = { version = "6.0.1", features = ["serde"] }
tower-http = { version = "0.5.2", features = ["full"] }
tokio-stream = { version = "0.1.15" }
thiserror = { version = "1.0.61" }

serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
ractor = { workspace = true }
tracing = { workspace = true }

err = { path = "../err" }
dbm = { path = "../dbm" }
cls = { path = "../cls" }
trg = { path = "../trg" }
svc = { path = "../svc" }
atm = { path = "../atm" }
vnd = { path = "../vnd" }
