[package]
name = "svc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ractor = { workspace = true }
serde = { workspace = true }
surrealdb = { workspace = true }

dbm = { path = "../dbm" }
err = { path = "../err" }
