[package]
name = "sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = { version = "0.7.4", features = ["ws"] }
axum-server = "0.6.0"
tower = { version = "0.4.13", features = ["full"] }
once_cell = "1.19.0"
surrealdb = "1.1.0"
surrealdb-migrations = "1.0.1"
config = { version = "0.13.4", features = ["json5"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.0", features = ["full"] }
tokio-util = "0.7.10"
utils = { path = "../utils" }
resources = { path = "../resources" }
integrations = { path = "../integrations" }
models = { path = "../models" }
env_logger = "0.10.1"
ractor = "0.9.3"
serde_json = "1.0.111"
revision = "0.5.0"
schemars = "0.8.16"
futures-util = "0.3.30"
uuid = { version = "1.6.1", features = ["v4"] }
typetag = "0.2.15"
