[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
ractor = "0.9.5"
thiserror = "1.0.56"
surrealdb = "1.1.1"
surrealdb-migrations = "1.0.1"
log = { version = "0.4.20", features = [] }
securestore = "0.100.0"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
nanoid = "0.4.0"
serde_json = "1.0.113"
tokio = { version = "*", features = ["sync"] }
