[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"
tokio = { version = "*", features = ["sync"] }
reqwest = { version = "0.11.24", features = ["json"] }

futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
surrealdb = { workspace = true }
ractor = { workspace = true }
