[package]
name = "vnd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
ractor = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

err = { path = "../err" }
bus = { path = "../bus" }
dbm = { path = "../dbm" }
cls = { path = "../cls" }
